--- a/source/index.html
+++ b/source/index.html
@@ -82,7 +82,7 @@
           <img class="dignity__img" src="img/main-bridge-mobile@1x.jpg" width="320" height="260" alt="">
         </div>
 
-        <div class="advantages__item dignity">
+        <div class="advantages__item dignity dignity--folded ">
           <div class="dignity__group dignity__group--folded dignity__group--area">
             <h2 class="dignity__title">Небольшая площадь</h2>
             <span class="dignity__number">- №3 -</span>
@@ -90,7 +90,7 @@
           </div>
         </div>
 
-        <div class="advantages__item dignity">
+        <div class="advantages__item dignity dignity--folded ">
           <div class="dignity__group dignity__group--folded dignity__group--road">
             <h2 class="dignity__title">Красивая дорога</h2>
             <span class="dignity__number">- №4 -</span>
@@ -98,7 +98,7 @@
           </div>
         </div>
 
-        <div class="advantages__item dignity">
+        <div class="advantages__item dignity dignity--folded ">
           <div class="dignity__group dignity__group--folded dignity__group--tourists">
             <h2 class="dignity__title">Мало туристов</h2>
             <span class="dignity__number">- №5 -</span>
@@ -110,7 +110,8 @@
 
     <div class="interested">
       <h2 class="interested__title">Заинтересовались?</h2>
-      <p class="interested__text">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+      <p class="interested__text">Укажите предполагаемые даты поездки,
+      и мы покажем вам лучшие предложения гостиниц в Седоне</p>
       <a class="interested__link" href="form.html">Найти гостиницу</a>
     </div>
 
