--- a/source/photo.html
+++ b/source/photo.html
@@ -45,37 +45,45 @@
       <div class="photo__intro">
         <h1 class="photo__intro-title">Фото и Видео</h1>
         <p class="photo__intro-description">
-          Не можете решиться на путешествие<br> из-за курса? Фотографии помогут вам забыть о политике и экономике.
+          Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.
         </p>
       </div>
       <div class="photo__list gallery">
 
         <div class="gallery__item">
           <img class="gallery__img" src="img/photo-sunset-mobile@1x.jpg" width="280" height="280" alt="">
-          <h2 class="gallery__title">Неродные просторы</h2>
-          <span class="gallery__author">Автор фото: Борис</span>
-          <span class="gallery__like">1350</span>
+          <div class="gallery__subtitle">
+            <h2 class="gallery__title">Неродные просторы</h2>
+            <span class="gallery__author">Автор фото: Борис</span>
+            <span class="gallery__like">1350</span>
+          </div>
         </div>
 
         <div class="gallery__item">
           <img class="gallery__img" src="img/photo-cactus-mobile@1x.jpg" width="280" height="" alt="280">
-          <h2 class="gallery__title">Местная растительность</h2>
-          <span class="gallery__author">Автор фото: Сергей</span>
-          <span class="gallery__like">143</span>
+          <div class="gallery__subtitle">
+            <h2 class="gallery__title">Местная растительность</h2>
+            <span class="gallery__author">Автор фото: Сергей</span>
+            <span class="gallery__like">143</span>
+          </div>
         </div>
 
         <div class="gallery__item">
           <img class="gallery__img" src="img/photo-roads-mobile@1x.jpg" width="280" height="280" alt="">
-          <h2 class="gallery__title">Дорога на север</h2>
-          <span class="gallery__author">Автор фото: Петр</span>
-          <span class="gallery__like">96</span>
+          <div class="gallery__subtitle">
+            <h2 class="gallery__title">Дорога на север</h2>
+            <span class="gallery__author">Автор фото: Петр</span>
+            <span class="gallery__like">96</span>
+          </div>
         </div>
 
         <div class="gallery__item">
           <img class="gallery__img" src="img/photo-bridge-mobile@1x.jpg" width="280" height="280" alt="">
-          <h2 class="gallery__title">Мост Дьявола</h2>
-          <span class="gallery__author">Автор фото: Антон</span>
-          <span class="gallery__like">254</span>
+          <div class="gallery__subtitle">
+            <h2 class="gallery__title">Мост Дьявола</h2>
+            <span class="gallery__author">Автор фото: Антон</span>
+            <span class="gallery__like">254</span>
+          </div>
         </div>
       </div>
     </section>
