Сделал разметку начальных сеток form.html

--- a/source/form.html
+++ b/source/form.html
@@ -48,7 +48,7 @@
           <p class="reviews__description-text">Помогите нашим отелям стать лучше! Оставьте отзыв о них, а также о посещенных вами достопримечательностях</p>
         </div>
 
-        <form class="reviews_form feedback" action="https://echo.htmlacademy.ru" method="get">
+        <form class="reviews__form feedback" action="https://echo.htmlacademy.ru" method="get">
 
           <fieldset class="feedback__section full-name">
             <legend class="full-name__subtitle">Представьтесь:</legend>
