Попытка построения сеток крупных блоков №1

--- a/source/form.html
+++ b/source/form.html
@@ -76,7 +76,7 @@
             <ul class="contact-information__list">
               <li class="contact-information__item">
                 <label class="contact-information__label">
-                  Контактный телефон*: <input class="contact-information__item-phone" type="text" name="phone" placeholder="Введите телефон">
+                  <span class="contact-information__contact">Контактный</span> телефон*: <input class="contact-information__item-phone" type="text" name="phone" placeholder="Введите телефон">
                 </label>
               </li>
               <li class="contact-information__item">
