--- a/source/index.html
+++ b/source/index.html
@@ -8,8 +8,8 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body class="page__body">
-  <header class="header container">
+<body class="page__body container">
+  <header class="header">
 
     <div class="header__logo logo">
       <a href="">
@@ -18,27 +18,25 @@
     </div>
 
     <nav class="main-nav">
-      <a class="main-nav__toggle" href="#">
-        <img src="" width="" height="" alt="Открыть меню">
-      </a>
+      <button class="main-nav__toggle" aria-label="Открыть меню"></button>
 
       <ul class="main-nav__list site-list">
-        <li class="site-list__item">
+        <li class="site-list__item site-list__item--main">
           <a class="site-list__link" href="index.html">Главная</a>
           <button class="site-list__button" aria-label="Закрыть меню"></button>
         </li>
-        <li class="site-list__item"><a class="site-list__link" href="photo.html">Фото и видео</a></li>
-        <li class="site-list__item"><a class="site-list__link" href="form.html">Форма отзыва</a></li>
-        <li class="site-list__item"><a class="site-list__link" href="">HTML Academy</a></li>
+        <li class="site-list__item site-list__item--photo"><a class="site-list__link" href="photo.html">Фото и видео</a></li>
+        <li class="site-list__item site-list__item--form"><a class="site-list__link" href="form.html">Форма отзыва</a></li>
+        <li class="site-list__item site-list__item--academy"><a class="site-list__link" href="">HTML Academy</a></li>
       </ul>
     </nav>
   </header>
 
-  <main class="main container">
+  <main class="main">
     <section class="intro">
 
-      <div class="intro__background">
-        <img class="intro__background-img" src="" width="" height="" alt="">
+      <div class="intro__background intro__background--index">
+        <img class="intro__background-img" src="img/text-sedona-index.svg" width="282" height="214" alt="">
       </div>
 
       <div class="intro__description intro-description">
@@ -120,7 +118,7 @@
     </div>
   </main>
 
-  <footer class="footer container">
+  <footer class="footer">
     <a class="footer__hashtag" href="">#VISITSEDONA</a>
 
     <div class="footer_social social">
