--- a/source/photo.html
+++ b/source/photo.html
@@ -48,8 +48,8 @@
       </div>
       <div class="photo__list gallery">
 
-        <div class="gallery__item">
-          <img class="gallery__img" src="img/photo-sunset-mobile@1x.jpg" width="280" height="280" alt="">
+        <div class="gallery__item gallery__item--full">
+          <img class="gallery__img gallery__img--full" src="img/photo-sunset-mobile@1x.jpg" width="280" height="280" alt="">
           <div class="gallery__subtitle">
             <h2 class="gallery__title">Неродные просторы</h2>
             <span class="gallery__author">Автор фото: Борис</span>
