--- a/source/index.html
+++ b/source/index.html
@@ -44,7 +44,7 @@
       <div class="advantages__list">
 
         <div class="advantages__item advantages__item--real-town">
-          <div class="advantages__group">
+          <div class="advantages__group advantages__group--real-town">
             <h2 class="advantages__title">Настоящий городок</h2>
             <span class="advantages__number">- №1 -</span>
             <p class="advantages__text">Седона не аттракцион для туристов, там течет своя жизнь</p>
