--- a/source/index.html
+++ b/source/index.html
@@ -132,7 +132,9 @@
     </div>
 
     <div class="footer__html-academy">
-      <p>Разработано <a class="footer__logo" href="https://htmlacademy.ru/intensive/adaptive"><img src="img/logo-htmlacademy.svg" width="26.9" height="34.1" alt="хтмл академия"></a></p>
+      <p class="footer__copyright">Разработано </p>
+      <a class="footer__logo" href="https://htmlacademy.ru/intensive/adaptive">
+        <img class="footer__img" src="img/logo-htmlacademy.svg" width="26.9" height="34.1" alt="хтмл академия"></a>
     </div>
   </footer>
 </body>
