--- a/source/photo.html
+++ b/source/photo.html
@@ -13,9 +13,6 @@
 
     <nav class="main-nav">
       <button class="main-nav__toggle" aria-label="Открыть меню"></button>
-      <a href="">
-        <img src="" width="" height="" alt="Туристический городок Седона">
-      </a>
       <ul class="main-nav__list site-list">
         <li class="site-list__item site-list__item--main">
           <a class="site-list__link" href="index.html">Главная</a>
@@ -24,6 +21,11 @@
         <li class="site-list__item site-list__item--form"><a class="site-list__link" href="form.html">Форма отзыва</a></li>
         <li class="site-list__item site-list__item--academy"><a class="site-list__link" href="">HTML Academy</a></li>
       </ul>
+      <div class="main-nav__logo">
+        <a href="">
+          <img class="main-nav__logo-img" src="../img/logo-sedona-mobile.svg" width="102" height="84" alt="Туристический городок Седона">
+        </a>
+      </div>
     </nav>
   </header>
 
